--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,6 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  time:
+    formats:
+      html5: "%Y-%m-%dT%H:%M:%S.%3N-%Z"
